dark mode is fixed

--- a/project3/assets/css/styles.css
+++ b/project3/assets/css/styles.css
@@ -12,6 +12,7 @@ body{
 
 .dark-mode {
     background-color: black;
+    color: white;
 }
 
 #darky:hover{
